Rename to SimPhony

--- a/tutorials/dispersion_tutorial.ipynb
+++ b/tutorials/dispersion_tutorial.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## dispersion.py Tutorial\n",
-    "This tutorial will show you how to run dispersion.py and some of its basic features. First, make sure you have installed the CastepPy package by running `pip install .` from the top directory containing setup.py"
+    "This tutorial will show you how to run dispersion.py and some of its basic features. First, make sure you have installed the SimPhony package by running `pip install .` from the top directory containing setup.py"
    ]
   },
   {
