--- a/versions/v0.6.1.markdown
+++ b/versions/v0.6.1.markdown
@@ -33,6 +33,7 @@ schemadotorg:
     givenName: D. J.
   codeRepository: https://github.com/pace-neutrons/Euphonic
   datePublished: '2021-07-13T00:00:00'
+  identifier: https://doi.org/10.5286/SOFTWARE/EUPHONIC/0.6.1
   keywords:
   - Python
   - physics
