--- a/versions/v0.6.2.markdown
+++ b/versions/v0.6.2.markdown
@@ -33,7 +33,7 @@ schemadotorg:
     givenName: D. J.
   codeRepository: https://github.com/pace-neutrons/Euphonic
   datePublished: '2021-09-08T00:00:00'
-  identifier: https://doi.org/10.5286/SOFTWARE/EUPHONIC
+  identifier: https://doi.org/10.5286/SOFTWARE/EUPHONIC/0.6.2
   keywords:
   - Python
   - physics
