--- a/versions/v0.6.2.markdown
+++ b/versions/v0.6.2.markdown
@@ -33,6 +33,8 @@ schemadotorg:
     givenName: D. J.
   codeRepository: https://github.com/pace-neutrons/Euphonic
   datePublished: '2021-09-08T00:00:00'
+  description: Euphonic is a Python package for efficient simulation of phonon bandstructures,
+    density of states and inelastic neutron scattering intensities from force constants
   identifier: https://doi.org/10.5286/SOFTWARE/EUPHONIC/0.6.2
   keywords:
   - Python
@@ -43,5 +45,6 @@ schemadotorg:
   - Phonopy
   license: http://www.gnu.org/licenses/gpl-3.0-standalone.html
   name: Euphonic
+  url: https://euphonic.readthedocs.io/en/v0.6.2
   version: 0.6.2
 ---
